--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -11,3 +11,16 @@ zuul.routes.customers.strip-prefix=false
 zuul.routes.products.path=/products/**
 zuul.routes.products.serviceId=products
 zuul.routes.products.strip-prefix=false
+
+zuul.routes.payments.path=/payments/**
+zuul.routes.payments.serviceId=payments
+zuul.routes.payments.strip-prefix=false
+
+zuul.routes.providers.path=/providers/**
+zuul.routes.providers.serviceId=providers
+zuul.routes.providers.strip-prefix=false
+
+zuul.routes.sellers.path=/sellers/**
+zuul.routes.sellers.serviceId=sellers
+zuul.routes.sellers.strip-prefix=false
+
