Criação do payments-processor para processar os pagamentos que estão em fila e criação de um novo recurso na api-payments para enviar o pagamento para fila

--- a/payments/src/main/resources/application.properties
+++ b/payments/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=payments
 eureka.instance.hostname=localhost
 server.port=8020
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=
+spring.activemq.password=
+payments.activemq.fila=payments
